@@ -155,6 +155,14 @@ behaviour to this default is used.")
 
 
 ;;
+;; erl-ie-show-session
+
+(defun erl-ie-show-session (node)
+  "Show the session for NODE, creating if necessary."
+  (interactive (list (erl-ie-read-nodename)))
+  (pop-to-buffer (erl-ie-session node)))
+
+;;
 ;; erl-ie-copy-buffer-to-session
 
 (defun erl-ie-copy-buffer-to-session (node)
